syntax = "proto3";
option go_package = "ivan.auth.v1;authv1";

package proto;

service AuthManager {
  rpc SignIn (SignInCredentials) returns (User);
  rpc SignUp (SignUpCredentials) returns (User);
}

message SignInCredentials {
  string email = 1;
  string unauth_id = 2;
  string password = 3;
}

message SignUpCredentials {
  string email = 1;
  string unauth_id= 2;
  string name = 3;
  string password =4;
  string address = 5;
}

message User {
  uint64 id = 1;
  string name = 2;
  string phone = 3;
  string email = 4;
  string address = 5;
  string img_url = 6;
  string card_number = 7;
  string password = 8;
}

// protoc -I microservices/auth/proto microservices/auth/proto/auth.proto --go_out=microservices/auth/proto/
// --go_opt=paths=source_relative --go-grpc_out=microservices/auth/proto/ --go-grpc_opt=paths=source_relative